--- a/docs/start/hello-world.ipynb
+++ b/docs/start/hello-world.ipynb
@@ -140,17 +140,10 @@
    "outputs": [],
    "source": [
     "# Set up six different observables.\n",
-    "from qiskit.quantum_info import Pauli\n",
+    "from qiskit.quantum_info import SparsePauliOp\n",
     "\n",
-    "ZZ = Pauli('ZZ')\n",
-    "ZI = Pauli('ZI')\n",
-    "IZ = Pauli('IZ')\n",
-    "XX = Pauli('XX')\n",
-    "XI = Pauli('XI')\n",
-    "IX = Pauli('IX')\n",
-    "\n",
-    "observables = [IZ, IX, ZI, XI, ZZ, XX]\n",
-    "observables_labels = [obs.to_label() for obs in observables]"
+    "observables_labels = [\"IZ\", \"IX\", \"ZI\", \"XI\", \"ZZ\", \"XX\"]\n",
+    "observables = [SparsePauliOp(label) for label in observables_labels]"
    ]
   },
   {
