Document supported windows version explicitly
In Qiskit 1.1.0 support for windows versions older than 10 was dropped
because the upstream Rust project no longer supports targeting windows
versions older than Windows 10. Previously we were not documenting the
versions of windows supported at all. But now that we have this new
constraint it's best to be explicit and say we only support windows 10
or newer.

--- a/docs/start/install.mdx
+++ b/docs/start/install.mdx
@@ -198,7 +198,7 @@ Additionally, Qiskit only supports the CPython implementation of the Python lang
   - Linux x86_64 (distributions compatible with the [manylinux 2014](https://www.python.org/dev/peps/pep-0599/) packaging specification).
   - macOS x86_64 (10.12 or later)
   - macOS ARM64 (10.15 or newer)
-  - Windows 64 bit
+  - Windows 64 bit (Windows 10 and newer supported)
 </details>
 
 <details>
@@ -223,7 +223,7 @@ Additionally, Qiskit only supports the CPython implementation of the Python lang
   - Linux ppc64le (distributions compatible with the [manylinux 2014](https://www.python.org/dev/peps/pep-0599/)packaging specification)
   - Linux s390x (distributions compatible with the [manylinux 2014](https://www.python.org/dev/peps/pep-0599/) packaging specification)
   - Linux i686 (distributions compatible with the [manylinux 2014](https://www.python.org/dev/peps/pep-0599/) packaging specification)
-  - Windows 32 bit
+  - Windows 10 32 bit
 </details>
 
 ## Qiskit versioning
