Dynamically generate index pages without recursing into children

--- a/docs/proposal3/execute-on-hardware-index.mdx
+++ b/docs/proposal3/execute-on-hardware-index.mdx
@@ -1,3 +1,7 @@
 # Execute on hardware
 
 In the execute on target hardware step, you ...
+
+Relevant pages:
+
+* [Introduction](./execute-on-target-hardware)
