--- a/docs/proposal3/map-problem-to-circuits-index.mdx
+++ b/docs/proposal3/map-problem-to-circuits-index.mdx
@@ -1,3 +1,7 @@
 # Map problem to circuits
 
 In the map problem to circuits step, you ...
+
+Relevant pages:
+
+* [Introduction](./circuit-construction-intro)
