--- a/docs/proposal3/optimize-for-hardware-index.mdx
+++ b/docs/proposal3/optimize-for-hardware-index.mdx
@@ -1,3 +1,13 @@
 # Optimize for hardware
 
 In the optimize for target hardware step, you ...
+
+Relevant pages:
+
+* [Introduction](./transpile)
+* [Transpiler stages](./transpiler-stages)
+* [Transpile with pass managers](./transpile-with-pass-managers)
+* [Transpile with pass managers](./transpile-with-pass-managers)
+* [Create a pass manager for dynamical decoupling](./dynamical-decoupling-pass-manager)
+* [Write a custom transpiler pass](./custom-transpiler-pass)
+* [Transpile against custom backends](./custom-backend)
