--- a/docs/proposal3/postprocess-results-index.mdx
+++ b/docs/proposal3/postprocess-results-index.mdx
@@ -1,3 +1,9 @@
 # Postprocess results
 
-Finally, in the postprocess results step, you ...
+In the postprocess results step, you ...
+
+Relevant pages:
+
+* [Introduction](./postprocess-results)
+* [Retrieve and save results](./save-jobs)
+* [Visualize results](./visualize-results)
