add recursion to index list

--- a/docs/proposal3/map-problem-to-circuits-index.mdx
+++ b/docs/proposal3/map-problem-to-circuits-index.mdx
@@ -5,3 +5,23 @@ In the map problem to circuits step, you ...
 Relevant pages:
 
 * [Introduction](./circuit-construction-intro)
+* Build circuits with Qiskit
+  * [Circuit library](./circuit-library)
+  * [Construct circuits](./circuit-construction)
+  * [Visualize circuits](./circuit-visualization)
+  * [Classical feedforward and control flow](./classical-feedforward-and-control-flow)
+  * [Synthesizing unitary operators](./unitary-synthesis)
+  * [Bit-ordering in Qiskit](./bit-ordering)
+  * [Save circuits to disk](./save-circuits)
+* Build opperators with Qiskit
+  * [Operators module overview](./operators-overview)
+  * [Specifying observables in the Pauli basis](./specify-observables-pauli)
+  * [Operators visualization](./operators-visualization)
+* Other circuit building tools
+  * [Pulse schedules](./pulse)
+  * OpenQASM
+    * [Intro to OpenQASM](./introduction-to-qasm)
+    * [OpenQASM 2 and the Qiskit SDK](./interoperate-qiskit-qasm2)
+    * [OpenQASM 3 and the Qiskit SDK](./interoperate-qiskit-qasm3)
+    * [OpenQASM 3 feature table](./qasm-feature-table)
+    * [OpenQASM 3.x live specification](https://openqasm.com/)
