--- a/docs/api/qiskit/dev/circuit_classical.mdx
+++ b/docs/api/qiskit/dev/circuit_classical.mdx
@@ -130,7 +130,7 @@ The operations traditionally associated with pre-, post- or infix operators in p
 
 #### Binary
 
-<Class id="qiskit.circuit.classical.expr.Binary" github="https://github.com/Qiskit/qiskit/tree/stable/1.1/qiskit/circuit/classical/expr/expr.py#L276-L356" signature="final class qiskit.circuit.classical.expr.Binary(op, left, right, type)">
+<Class id="qiskit.circuit.classical.expr.Binary" github="https://github.com/Qiskit/qiskit/tree/stable/1.1/qiskit/circuit/classical/expr/expr.py#L276-L365" signature="final class qiskit.circuit.classical.expr.Binary(op, left, right, type)">
   A binary expression.
 
   **Parameters**
@@ -142,7 +142,7 @@ The operations traditionally associated with pre-, post- or infix operators in p
 
   ##### Op
 
-  <Class id="qiskit.circuit.classical.expr.Binary.Op" github="https://github.com/Qiskit/qiskit/tree/stable/1.1/qiskit/circuit/classical/expr/expr.py#L289-L335" signature="Op(value)">
+  <Class id="qiskit.circuit.classical.expr.Binary.Op" github="https://github.com/Qiskit/qiskit/tree/stable/1.1/qiskit/circuit/classical/expr/expr.py#L289-L344" signature="Op(value)">
     Enumeration of the opcodes for binary operations.
 
     The bitwise operations [`BIT_AND`](#qiskit.circuit.classical.expr.Binary.Op.BIT_AND "qiskit.circuit.classical.expr.Binary.Op.BIT_AND"), [`BIT_OR`](#qiskit.circuit.classical.expr.Binary.Op.BIT_OR "qiskit.circuit.classical.expr.Binary.Op.BIT_OR") and [`BIT_XOR`](#qiskit.circuit.classical.expr.Binary.Op.BIT_XOR "qiskit.circuit.classical.expr.Binary.Op.BIT_XOR") apply to two operands of the same type, which must be a single bit or an unsigned integer of fixed width. The resultant type is the same as the two input types.
@@ -219,13 +219,13 @@ The operations traditionally associated with pre-, post- or infix operators in p
       Numeric greater than or equal to. `lhs >= rhs`.
     </Attribute>
 
-    ### SHIFT\_LEFT
+    ###### SHIFT\_LEFT
 
     <Attribute id="qiskit.circuit.classical.expr.Binary.Op.SHIFT_LEFT" attributeValue="12">
       Zero-padding bitshift to the left. `lhs << rhs`.
     </Attribute>
 
-    ### SHIFT\_RIGHT
+    ###### SHIFT\_RIGHT
 
     <Attribute id="qiskit.circuit.classical.expr.Binary.Op.SHIFT_RIGHT" attributeValue="13">
       Zero-padding bitshift to the right. `lhs >> rhs`.
@@ -234,6 +234,8 @@ The operations traditionally associated with pre-, post- or infix operators in p
 </Class>
 
 Bit-like types (unsigned integers) can be indexed by integer types, represented by [`Index`](#qiskit.circuit.classical.expr.Index "qiskit.circuit.classical.expr.Index"). The result is a single bit. The resulting expression has an associated memory location (and so can be used as an lvalue for [`Store`](circuit#qiskit.circuit.Store "qiskit.circuit.Store"), etc) if the target is also an lvalue.
+
+#### Index
 
 <Class id="qiskit.circuit.classical.expr.Index" github="https://github.com/Qiskit/qiskit/tree/stable/1.1/qiskit/circuit/classical/expr/expr.py#L368-L397" signature="final class qiskit.circuit.classical.expr.Index(target, index, type)">
   An indexing expression.
@@ -601,7 +603,7 @@ Similarly, the binary operations and relations have helper functions defined.
   [*Expr*](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.expr.Expr")
 </Function>
 
-### shift\_left
+#### shift\_left
 
 <Function id="qiskit.circuit.classical.expr.shift_left" github="https://github.com/Qiskit/qiskit/tree/stable/1.1/qiskit/circuit/classical/expr/constructors.py#L491-L516" signature="qiskit.circuit.classical.expr.shift_left(left, right, /, type=None)">
   Create a ‘bitshift left’ expression node from the given two values, resolving any implicit casts and lifting the values into [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.Value") nodes if required.
@@ -631,7 +633,7 @@ Similarly, the binary operations and relations have helper functions defined.
   [Expr](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.Expr")
 </Function>
 
-### shift\_right
+#### shift\_right
 
 <Function id="qiskit.circuit.classical.expr.shift_right" github="https://github.com/Qiskit/qiskit/tree/stable/1.1/qiskit/circuit/classical/expr/constructors.py#L519-L536" signature="qiskit.circuit.classical.expr.shift_right(left, right, /, type=None)">
   Create a ‘bitshift right’ expression node from the given values, resolving any implicit casts and lifting the values into [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.Value") nodes if required.
@@ -656,7 +658,7 @@ Similarly, the binary operations and relations have helper functions defined.
 
 You can index into unsigned integers and bit-likes using another unsigned integer of any width. This includes in storing operations, if the target of the index is writeable.
 
-### index
+#### index
 
 <Function id="qiskit.circuit.classical.expr.index" github="https://github.com/Qiskit/qiskit/tree/stable/1.1/qiskit/circuit/classical/expr/constructors.py#L539-L556" signature="qiskit.circuit.classical.expr.index(target, index, /)">
   Index into the `target` with the given integer `index`, lifting the values into [`Value`](#qiskit.circuit.classical.expr.Value "qiskit.circuit.classical.expr.Value") nodes if required.
@@ -712,7 +714,7 @@ A typical consumer of the expression tree wants to recursively walk through the 
 
 #### ExprVisitor
 
-<Class id="qiskit.circuit.classical.expr.ExprVisitor" github="https://github.com/Qiskit/qiskit/tree/stable/1.1/qiskit/circuit/classical/expr/visitors.py#L30-L56" signature="qiskit.circuit.classical.expr.ExprVisitor">
+<Class id="qiskit.circuit.classical.expr.ExprVisitor" github="https://github.com/Qiskit/qiskit/tree/stable/1.1/qiskit/circuit/classical/expr/visitors.py#L30-L59" signature="qiskit.circuit.classical.expr.ExprVisitor">
   Base class for visitors to the [`Expr`](#qiskit.circuit.classical.expr.Expr "qiskit.circuit.classical.expr.Expr") tree. Subclasses should override whichever of the `visit_*` methods that they are able to handle, and should be organised such that non-existent methods will never be called.
 
   ##### visit\_binary
@@ -739,7 +741,7 @@ A typical consumer of the expression tree wants to recursively walk through the 
     *\_T\_co*
   </Function>
 
-  ### visit\_index
+  ##### visit\_index
 
   <Function id="qiskit.circuit.classical.expr.ExprVisitor.visit_index" github="https://github.com/Qiskit/qiskit/tree/stable/1.1/qiskit/circuit/classical/expr/visitors.py#L58-L59" signature="visit_index(node, /)">
     **Return type**
