Make Abby's changes reproducible with the script

--- a/docs/proposal3/execute-on-hardware-index.mdx
+++ b/docs/proposal3/execute-on-hardware-index.mdx
@@ -6,38 +6,37 @@ Depending on whether you are using the Sampler or Estimator primitive, the outco
 
 There are a number of software tools that could be used for this step, you can check out the following resources:
 
+
 ### Run with primitives
-  * [Introduction to primitives](./primitives)
-  * [Get started with primitives](./primitives-get-started)
-  * [Primitives examples](./primitives-examples)
+* [Introduction to primitives](./primitives)
+* [Get started with primitives](./primitives-get-started)
+* [Primitives examples](./primitives-examples)
 
 ### Configure runtime options
-  * [Configure runtiem compilation](./configure-runtime-compilation)
-  * [Configure runtime error mitigation](./configure-error-mitigation)
-  * [Advanced runtime options](./advanced-runtime-options)
+* [Configure runtiem compilation](./configure-runtime-compilation)
+* [Configure runtime error mitigation](./configure-error-mitigation)
+* [Advanced runtime options](./advanced-runtime-options)
 
 ### Execution modes
-  * [Introduction to Qiskit Runtime execution modes](./execution-modes)
-  * [Introduction to Qiskit Runtime sessions](./sessions)
-  * [Run jobs in a session](./run-jobs-in-session)
-  * [Run jobs in a batch](./run-jobs-batch)
-  * [FAQs](./execution-modes-faq)
+* [Introduction to Qiskit Runtime execution modes](./execution-modes-intro)
+* [Introduction to Qiskit Runtime sessions](./sessions)
+* [Run jobs in a session](./run-jobs-in-session)
+* [Run jobs in a batch](./run-jobs-batch)
+* [FAQs](./execution-modes-faq)
 
 ### Manage jobs
-  * [Monitor a job](./monitor-job)
-  * [Estimate job run time](./estimate-job-run-time)
-  * [Minimize job run time](./minimize-time)
-  * [Maximum execution time for a Qiskit Runtime job or session](./max-execution-time)
+* [Monitor a job](./monitor-job)
+* [Estimate job run time](./estimate-job-run-time)
+* [Minimize job run time](./minimize-time)
+* [Maximum execution time for a Qiskit Runtime job or session](./max-execution-time)
 
 ### Systems and platform information
-  * [Processor types](./processor-types)
-  * [System information](./system-information)
-  * [Get backend information with Qiskit](./get-backend-information)
-  * [Native gates and operations](./native-gates)
-  * [Retired systems](./retired-systems)
-  * [Hardware considerations and limitations for classical feedforward and control flow](./dynamic-circuits-considerations)
-  * [Instances](./instances)
-  * [Fair-share scheduler](./fair-share-queue)
-  * [Manage cost](./manage-cost)
-
-Once this step is completed you can move on to the next - "post-process results"[LINK TO NEXT PAGE]
+* [Processor types](./processor-types)
+* [System information](./system-information)
+* [Get backend information with Qiskit](./get-backend-information)
+* [Native gates and operations](./native-gates)
+* [Retired systems](./retired-systems)
+* [Hardware considerations and limitations for classical feedforward and control flow](./dynamic-circuits-considerations)
+* [Instances](./instances)
+* [Fair-share scheduler](./fair-share-queue)
+* [Manage cost](./manage-cost)
