--- a/docs/proposal3/patterns-index.mdx
+++ b/docs/proposal3/patterns-index.mdx
@@ -1,9 +1,4 @@
----
-title: Introduction to Qiskit Patterns
-description: What are Qiskit Patterns?
----
-
-# Qiskit Patterns
+# Introduction to Qiskit Patterns
 
 Qiskit Patterns is a general framework for breaking down domain-specific problems and contextualizing required capabilities in stages. This allows for the seamless composability of new capabilities developed by IBM Quantum researchers (and others) and enables a future in which quantum computing tasks are performed by powerful heterogenous (CPU/GPU/QPU) computing infrastructure. Blocks or groups of blocks perform the steps of a pattern, with the Qiskit SDK providing an important foundational layer, supported by other tools or services developed by IBM Quantum or the quantum open-source community. Qiskit Patterns allows domain experts to specify a problem and compose the tooling (blocks) that achieves a Qiskit pattern, then that pattern could be executed locally, through cloud services, or deployed with Quantum Serverless.
 
