remove "ignore warnings" code

--- a/tutorials/chsh-inequality/chsh-inequality.ipynb
+++ b/tutorials/chsh-inequality/chsh-inequality.ipynb
@@ -82,6 +82,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2ecdcca6",
+   "metadata": {},
+   "source": [
+    "## Requirements\n",
+    "\n",
+    "Before starting this tutorial, ensure that you have the following installed:\n",
+    "\n",
+    "* Qiskit SDK 1.0 or later\n",
+    "* Qiskit Runtime (`pip install qiskit-ibm-runtime`) 0.22 or later\n",
+    "* Visualization support (`pip install qiskit[visualization]`)\n",
+    "* NumPy (`pip install numpy`)\n",
+    "* Matplotlib (`pip install matplotlib`)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9c7dcf81",
    "metadata": {},
    "source": [
@@ -97,9 +113,6 @@
    "source": [
     "# General\n",
     "import numpy as np\n",
-    "import warnings\n",
-    "\n",
-    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "# Qiskit imports\n",
     "from qiskit import QuantumCircuit\n",
@@ -135,7 +148,7 @@
    "source": [
     "# To run on hardware, select the backend with the fewest number of jobs in the queue\n",
     "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
-    "backend = service.least_busy(operational=True, simulator=False)\n",
+    "backend = service.least_busy(operational=True, simulator=False, min_num_qubits=127)\n",
     "backend.name"
    ]
   },
@@ -347,7 +360,7 @@
    "outputs": [],
    "source": [
     "# To run on a local simulator:\n",
-    "#   1. Use the StatevectorEstimator from qiskit.primitives instead.\n",
+    "#   Use the StatevectorEstimator from qiskit.primitives instead.\n",
     "estimator = Estimator(backend=backend)\n",
     "\n",
     "pub = (\n",
@@ -435,7 +448,7 @@
    "id": "63e63853",
    "metadata": {},
    "source": [
-    "In the figure, the red dashed lines delimit the classical bounds ($\\pm 2$) and the dash-dotted blue lines delimit the quantum bounds ($\\pm 2\\sqrt{2}$). You can see that the experimental results resemble the general trend of the simulated results and there are regions where the CHSH witness quantities exceeds the classical bounds. Congratulations! You have successfully demonstrated the violation of CHSH inequality in a real quantum system!"
+    "In the figure, the dashed lines delimit the classical bounds ($\\pm 2$) and the dash-dotted lines delimit the quantum bounds ($\\pm 2\\sqrt{2}$). You can see that the experimental results resemble the general trend of the simulated results and there are regions where the CHSH witness quantities exceeds the classical bounds. Congratulations! You have successfully demonstrated the violation of CHSH inequality in a real quantum system!"
    ]
   },
   {
