--- a/tutorials/variational-quantum-eigensolver/vqe.ipynb
+++ b/tutorials/variational-quantum-eigensolver/vqe.ipynb
@@ -21,6 +21,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "55b94021",
+   "metadata": {},
+   "source": [
+    "## Requirements\n",
+    "\n",
+    "Before starting this tutorial, ensure that you have the following installed:\n",
+    "\n",
+    "* Qiskit SDK 1.0 or later\n",
+    "* Qiskit Runtime (`pip install qiskit-ibm-runtime`) 0.22 or later\n",
+    "* Visualization support (`pip install qiskit[visualization]`)\n",
+    "* NumPy (`pip install numpy`)\n",
+    "* SciPy (`python -m pip install scipy`)\n",
+    "* Matplotlib (`pip install matplotlib`)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "7db2e559",
