--- a/tutorials/grovers-algorithm/grovers.ipynb
+++ b/tutorials/grovers-algorithm/grovers.ipynb
@@ -14,6 +14,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "152c479f",
+   "metadata": {},
+   "source": [
+    "## Requirements\n",
+    "\n",
+    "Before starting this tutorial, ensure that you have the following installed:\n",
+    "\n",
+    "* Qiskit SDK 1.0 or later\n",
+    "* Qiskit Runtime (`pip install qiskit-ibm-runtime`) 0.22 or later\n",
+    "* Visualization support (`pip install qiskit[visualization]`)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "54602708",
