--- a/tutorials/quantum-approximate-optimization-algorithm/qaoa.ipynb
+++ b/tutorials/quantum-approximate-optimization-algorithm/qaoa.ipynb
@@ -14,6 +14,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9fb04860",
+   "metadata": {},
+   "source": [
+    "## Requirements\n",
+    "\n",
+    "Before starting this tutorial, ensure that you have the following installed:\n",
+    "\n",
+    "* Qiskit SDK 1.0 or later\n",
+    "* Qiskit Runtime (`pip install qiskit-ibm-runtime`) 0.22 or later\n",
+    "* Visualization support (`pip install qiskit[visualization]`)\n",
+    "* NumPy (`pip install numpy`)\n",
+    "* SciPy (`python -m pip install scipy`)\n",
+    "* rustworkx (`pip install rustworkx`)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "e291b6c0",
