--- a/tutorials/submitting-transpiled-circuits/submitting-transpiled-circuits.ipynb
+++ b/tutorials/submitting-transpiled-circuits/submitting-transpiled-circuits.ipynb
@@ -11,8 +11,26 @@
     "\n",
     "To get the best performance from your circuits, the Qiskit Runtime service will pass all circuits through Qiskit's transpiler before running them. While this is usually a good thing, we might sometimes want to disable this by passing the argument `skip_transpilation=True` to the primitive we're using.\n",
     "\n",
-    "For example, we may know better than the transpiler in some cases, or want to target a specific subset of qubits on a specific device. In this tutorial, we'll disable automatic transpilation to test the performance of different transpiler settings. This example will take you through the full process of creating, transpiling, and submitting circuits.\n",
+    "For example, we may know better than the transpiler in some cases, or want to target a specific subset of qubits on a specific device. In this tutorial, we'll disable automatic transpilation to test the performance of different transpiler settings. This example will take you through the full process of creating, transpiling, and submitting circuits."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Requirements\n",
     "\n",
+    "Before starting this tutorial, ensure that you have the following installed:\n",
+    "\n",
+    "* Qiskit SDK 1.0 or later\n",
+    "* Qiskit Runtime (`pip install qiskit-ibm-runtime`) 0.22 or later\n",
+    "* Visualization support (`pip install qiskit[visualization]`)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Setup"
    ]
   },
