--- a/tutorials/submitting-transpiled-circuits/submitting-transpiled-circuits.ipynb
+++ b/tutorials/submitting-transpiled-circuits/submitting-transpiled-circuits.ipynb
@@ -22,9 +22,8 @@
     "\n",
     "Before starting this tutorial, ensure that you have the following installed:\n",
     "\n",
-    "* Qiskit SDK 1.0 or later\n",
-    "* Qiskit Runtime (`pip install qiskit-ibm-runtime`) 0.22 or later\n",
-    "* Visualization support (`pip install qiskit[visualization]`)"
+    "* Qiskit SDK 1.0 or later, with visualization support (`'pip install qiskit[visualization]'`)\n",
+    "* Qiskit Runtime (`pip install qiskit-ibm-runtime`) 0.22 or later"
    ]
   },
   {
