--- a/docs/run/get-backend-information.ipynb
+++ b/docs/run/get-backend-information.ipynb
@@ -91,7 +91,7 @@
     "\n",
     "You can also filter the available backends by their properties. For more general filters, you can make advanced functions using a lambda function. Refer to the [API documentation](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#backends) for more details.\n",
     "\n",
-    "Let’s try getting only backends that fit these criteria:\n",
+    "The following code only returns backends that fit these criteria:\n",
     "\n",
     "*   Are real quantum devices (`simulator=False`)\n",
     "*   Are currently operational (`operational=True`)\n",
@@ -127,7 +127,7 @@
    "id": "6de23dcc-c2ba-4338-b1e8-4086ed653240",
    "metadata": {},
    "source": [
-    "A similar method is [`QiskitRuntimeService.least_busy()`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#least_busy), which takes the same filters as `backends()` but returns the backend that matches the filters and has the least number of jobs pending in the queue:"
+    "Use these keyword arguments to filter by any attribute in backend configuration or status. A similar method is [`QiskitRuntimeService.least_busy()`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#least_busy), which takes the same filters as `backends()` but returns the backend that matches the filters and has the least number of jobs pending in the queue:"
    ]
   },
   {
