--- a/docs/run-new/index.mdx
+++ b/docs/run-new/index.mdx
@@ -14,6 +14,6 @@ Step 3 in Qiskit Patterns, "Execute on target hardware," centers around the [Qis
 
 In addition to detailed information on primitives, you can read about the available execution modes in this section. While you can always submit a single job at a time, you can also use Runtime Primitives to run jobs in a [session](/run/sessions) or in [batch mode](/run/run-jobs-batch). These execution modes assist your utility-scale jobs to run efficiently. 
 
-This section also includes a page about our [processor types](/run/processor-types), how to [monitor jobs](/run/monitor-job) and [get information about our systems with the Qiskit SDK](/run/get-backend-information), details about [Qiskit Serverless](/run/qiskit-serverless), and more.
+This section also includes a page about our [processor types](/run/processor-types), how to [monitor jobs](/run/monitor-job) and [get information about our systems with the Qiskit SDK](/run/get-backend-information), details about [Qiskit Serverless](/run/quantum-serverless), and more.
 
 [^1]: Median 2Q gate errors measured over all accessible Eagle processors from July 20 to September 20, 2023.
