add back quantum info section

--- a/docs/proposal3/index.mdx
+++ b/docs/proposal3/index.mdx
@@ -22,6 +22,10 @@ For initializing and manipulating registers, circuits, instructions, gates, para
 ([`qiskit.circuit.library`](https://docs.quantum.ibm.com/api/qiskit/circuit_library)) 
 A vast range of circuits, instructions, and gates - key building blocks for circuit-based quantum computations.
 
+### Quantum Information
+([`qiskit.quantum_info`](https://docs.quantum.ibm.com/api/qiskit/quantum_info))
+A toolkit for working with quantum states, operators and channels, using exact calculations (no sampling noise). Use this module to specify input observables and analyse fidelity of outputs from primitives queries.
+
 ### Transpiler 
 ([`qiskit.transpiler`](https://docs.quantum.ibm.com/api/qiskit/transpiler))
 For transforming and adapting quantum circuits to suit specific device topology and/or optimizing for execution on real quantum systems.
