--- a/docs/run/get-backend-information.ipynb
+++ b/docs/run/get-backend-information.ipynb
@@ -91,7 +91,7 @@
     "\n",
     "You can also filter the available backends by their properties. For more general filters, you can make advanced functions using a lambda function. Refer to the [API documentation](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#backends) for more details.\n",
     "\n",
-    "The following code only returns backends that fit these criteria:\n",
+    "The following code returns only backends that fit these criteria:\n",
     "\n",
     "*   Are real quantum devices (`simulator=False`)\n",
     "*   Are currently operational (`operational=True`)\n",
